[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "eventlet>=0.39.0",
    "flask-socketio>=5.5.1",
    "flask==2.3.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "oauthlib>=3.2.2",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.4",
    "python-binance>=1.0.28",
    "python-dotenv>=1.0.1",
    "python-socketio[client]>=5.12.1",
    "scikit-learn>=1.6.1",
    "simple-websocket>=1.1.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.6",
    "werkzeug==2.3.7",
    "numpy>=2.2.3",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "schedule>=1.2.2",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
